Click Changelog
===============

This contains all major version changes between click releases.

Version 2.3
-----------

(bugfix release, release date to be decided)

- Fixed an incorrectly formatted help record for count options.'
- Add support for ansi code stripping on Windows if colorama
  is not available.

Version 2.2
-----------

(bugfix release, released on June 26th 2014)

- fixed tty detection on PyPy.
- fixed an issue that progress bars were not rendered when the
  context manager was entered.

Version 2.1
-----------

(bugfix release, released on June 14th 2014)

- fixed the :func:`launch` function on windows.
- improved the colorama support on windows to try hard to not
  screw up the console if the application is interrupted.
- fixed windows terminals incorrectly being reported to be 80
  characters wide instead of 79
- use colorama win32 bindings if available to get the correct
  dimensions of a windows terminal.
- fixed an issue with custom function types on Python 3.
- fixed an issue with unknown options being incorrectly reported
  in error messages.

Version 2.0
-----------

(codename "tap tap tap", released on June 6th 2014)

- added support for opening stdin/stdout on Windows in
  binary mode correctly.
- added support for atomic writes to files by going through
  a temporary file.
- introduced :exc:`BadParameter` which can be used to easily perform
  custom validation with the same error messages as in the type system.
- added :func:`progressbar`; a function to show progress bars.
- added :func:`get_app_dir`; a function to calculate the home folder
  for configs.
- Added transparent handling for ANSI codes into the :func:`echo`
  function through `colorama`.
- Added :func:`clear` function.
- Breaking change: parameter callbacks now get the parameter object
  passed as second argument.  There is legacy support for old callbacks
  which will warn but still execute the script.
- Added :func:`style`, :func:`unstyle` and :func:`secho` for ANSI